name:                pleasecaption
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pleasecaption#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pleasecaption
  hs-source-dirs:      src
  other-modules:       Web.Twitter.PleaseCaption.Replies
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       conduit >= 1.2,
                       lens >= 4.14,
                       resourcet >= 1.1.7.4,
                       text >= 1.2.2.1,
                       twitter-conduit >= 0.2.1,
                       aeson >= 0.11,
                       twitter-types,
                       twitter-types-lens,
                       random-extras >= 0.19,
                       random-fu >= 0.2.7.0,
                       random-source >= 0.3
