name:                pleasecaption
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pleasecaption#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pleasecaption
  hs-source-dirs:      src
  other-modules:       Web.Twitter.PleaseCaption.Replies,
                       Web.Twitter.PleaseCaption.Replies.Assert,
                       Web.Twitter.PleaseCaption.Client,
                       Web.Twitter.PleaseCaption.Status
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 0.11,
                       bytestring >= 0.10.6.0,
                       conduit >= 1.2,
                       lens >= 4.13,
                       mtl >= 2.2.1,
                       resourcet >= 1.1.7.4,
                       random-extras >= 0.19,
                       random-fu >= 0.2.7.0,
                       random-source >= 0.3,
                       template-haskell >= 2.10,
                       text >= 1.2.2.1,
                       twitter-conduit >= 0.2.1,
                       transformers >= 0.4,
                       twitter-types,
                       twitter-types-lens
