name:                pleasecaption
version:             0.2.0.2
synopsis:            A twitter bot that reminds you to caption your status
homepage:            https://github.com/stillinbeta/pleasecaption#readme
license:             MIT
license-file:        LICENSE
author:              Liz (@stillinbeta)
maintainer:          web+pleasecaption@stillinbeta.com
copyright:           2016 Liz (@stillinbeta)
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Twitter.PleaseCaption.Replies,
                       Web.Twitter.PleaseCaption.Replies.Assert,
                       Web.Twitter.PleaseCaption.Client,
                       Web.Twitter.PleaseCaption.Status,
                       Web.Twitter.PleaseCaption.Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 0.11,
                       bytestring >= 0.10.6.0,
                       conduit >= 1.2,
                       lens >= 4.13,
                       mtl >= 2.2.1,
                       resourcet >= 1.1.7.4,
                       random-extras >= 0.19,
                       random-fu >= 0.2.7.0,
                       random-source >= 0.3,
                       template-haskell >= 2.10,
                       text >= 1.2.2.1,
                       twitter-conduit >= 0.2.3,
                       transformers >= 0.4,
                       twitter-types,
                       twitter-types-lens

executable pleasecaption
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       conduit >= 1.2,
                       mtl >= 2.2.1,
                       resourcet >= 1.1.7.4,
                       twitter-conduit >= 0.2.3,
                       twitter-types,
                       text >= 1.2.2.1,
                       transformers >= 0.4,
                       pleasecaption
  other-modules:       Paths_pleasecaption
  default-language:    Haskell2010